# minimp3-rs

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: qa.yml  rust.yml
crates/minimp3/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/minimp3-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/minimp3-sys/examples/: example.rs
crates/minimp3-sys/src/: bindings.rs  lib.rs
crates/minimp3/src/: error.rs  lib.rs
crates/minimp3/tests/: decode-mp3.rs
examples/: example.rs  example_tokio.rs
minimp3-sys/: Cargo.toml  README.md  build.rs  minimp3.c  wrapper.h
minimp3-sys/examples/: example.rs
minimp3-sys/src/: bindings.rs  lib.rs
src/: bindgen.rs  error.rs  lib.rs
