[package]
name = "minimp3"
version = "0.5.2"
authors = ["germän gômez <germangb42@gmail.com>", "Erin Moon <erin@hashbang.sh>"]
description = "Rust bindings for the minimp3 library."
keywords = ["mp3", "audio", "decoder", "mpeg", "media"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
repository = "https://github.com/germangb/minimp3-rs.git"
edition = "2018"

[dependencies]
minimp3-sys = { version = "0.3", path = "minimp3-sys" }
slice-ring-buffer = "0.3.4"
tokio = { version = "1.0", features = ["io-util"], optional = true }
thiserror = "1.0.23"

[features]
default = []
async_tokio = ["tokio"]

[dev-dependencies]
futures = "0.3.8"
