[package]
name = "minimp3"
description = "Rust bindings and high-level wrapper for the minimp3 library."
version = "0.6.0"
authors = [
    "germän gômez <germangb42@gmail.com>",
    "Erin Moon <erin@hashbang.sh>",
    "Philipp Schuster <phip1611@gmail.com",
]
keywords = ["mp3", "audio", "decoder", "mpeg", "media"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
repository = "https://github.com/germangb/minimp3-rs.git"
edition = "2024"

[dependencies]
slice-ring-buffer = "0.3.0"
minimp3-sys = { version = "0.3", path = "minimp3-sys" }
tokio = { version = "1.0", features = ["io-util"], optional = true }
thiserror = "1.0.23"

[features]
default = []
async_tokio = ["tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"
