[package]
name = "minimp3"
description = """
Rust bindings with a high-level wrapper for the minimp3 C library.
"""
version = "0.6.1"
authors = [
  "germän gômez <germangb42@gmail.com>",
  "Erin Moon <erin@hashbang.sh>",
  "Philipp Schuster <phip1611@gmail.com",
]
keywords = ["mp3", "audio", "decoder", "mpeg", "media"]
categories = ["multimedia", "multimedia::audio"]
repository = "https://github.com/germangb/minimp3-rs.git"
readme = "README.md"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# TODO not no_std compatible
slice-ring-buffer = { version = "0.3.0" }
minimp3-sys = { version = "0.6" }
tokio = { version = "1.0", features = ["io-util"], optional = true }
thiserror = "2.0"

[features]
default = ["std"]
async_tokio = ["dep:tokio", "std"]
std = []

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

